--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "~4.7.2"
   }
 }
