--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
+              "./src/assets/Fontawesome-V6-Pro-main/assets/css/all.min.css",
               "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "./node_modules/ngx-spinner/animations/ball-running-dots.css",
               "./node_modules/ngx-spinner/animations/ball-fussion.css"
@@ -104,7 +105,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./src/assets/Fontawesome-V6-Pro-main/assets/css/all.min.css"
             ],
             "scripts": []
           }
