--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@binssoft/ngx-captcha": "^1.3.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "ngx-captcha": "^13.0.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
